Adjusted CSS to prevent elements from overflowing background

--- a/js-project-frontend/styles/style.css
+++ b/js-project-frontend/styles/style.css
@@ -13,7 +13,7 @@ body {
   background-color: #fde4a7;
   padding: 2em;
   font-family: sans-serif;
-  max-height: 75%;
+  max-height: 53%;
   overflow: auto;
 }
 
@@ -73,7 +73,7 @@ textarea {
 
 #buttons-div {
   background-color: #fad2e2;
-  max-height: 80%;
+  max-height: 40%;
   margin-right: 2em;
   display: grid;
   grid-template-columns: 1fr;
